處理 stop propagation

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="letsmeet.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/letsmeet.ico" />
     <!-- <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script> -->
     <script
       src="https://accounts.google.com/gsi/client?hl=en"
